--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "sedona",
+  "name": "Device",
   "version": "1.0.0",
   "private": true,
-  "description": "Адаптивный проект, Седона",
+  "description": "Резиновый проект, Девайс",
   "author": "Misha Chernov",
   "license": "MIT",
   "repository": {
